# swagger.yml
@@ -8,10 +8,10 @@ schemes:
   - http
 
 consumes:
-  - application/vnd.laincloud.entry.v1+json
+  - application/vnd.laincloud.entry.v3+json
 
 produces:
-  - application/vnd.laincloud.entry.v1+json
+  - application/vnd.laincloud.entry.v3+json
 
 paths:
   /attach:
@@ -87,27 +87,6 @@ paths:
             Set-Cookie:
               description: delete access_token in cookie
               type: string
-        default:
-          description: generic error response
-          schema:
-            $ref: "#/definitions/error"
-
-  /api/me:
-    get:
-      tags:
-        - auth
-      operationId: getMe
-      parameters:
-        - name: Cookie
-          description: Cookie with access_token
-          in: header
-          required: true
-          type: string
-      responses:
-        200:
-          description: the user corresponding to the access_token
-          schema:
-            $ref: "#/definitions/user"
         default:
           description: generic error response
           schema:
@@ -337,11 +316,3 @@ definitions:
         type: integer
         format: int64
         description: "Unix timestamp(unit: second)"
-
-  user:
-    type: object
-    required:
-      - email
-    properties:
-      email:
-        type: string
